var annotated_dup =
[
    [ "catena", "namespacecatena.html", [
      [ "common", "namespacecatena_1_1common.html", [
        [ "Authorizer", "classcatena_1_1common_1_1Authorizer.html", "classcatena_1_1common_1_1Authorizer" ],
        [ "CommandTag", "structcatena_1_1common_1_1CommandTag.html", null ],
        [ "Connect", "classcatena_1_1common_1_1Connect.html", "classcatena_1_1common_1_1Connect" ],
        [ "ConstraintTag", "structcatena_1_1common_1_1ConstraintTag.html", null ],
        [ "Device", "classcatena_1_1common_1_1Device.html", "classcatena_1_1common_1_1Device" ],
        [ "EmptyValue", "structcatena_1_1common_1_1EmptyValue.html", null ],
        [ "FakeLock", "structcatena_1_1common_1_1FakeLock.html", null ],
        [ "FieldInfo", "structcatena_1_1common_1_1FieldInfo.html", null ],
        [ "IConnect", "classcatena_1_1common_1_1IConnect.html", "classcatena_1_1common_1_1IConnect" ],
        [ "IConstraint", "classcatena_1_1common_1_1IConstraint.html", "classcatena_1_1common_1_1IConstraint" ],
        [ "IDevice", "classcatena_1_1common_1_1IDevice.html", "classcatena_1_1common_1_1IDevice" ],
        [ "ILanguagePack", "classcatena_1_1common_1_1ILanguagePack.html", "classcatena_1_1common_1_1ILanguagePack" ],
        [ "IMenu", "classcatena_1_1common_1_1IMenu.html", "classcatena_1_1common_1_1IMenu" ],
        [ "IMenuGroup", "classcatena_1_1common_1_1IMenuGroup.html", "classcatena_1_1common_1_1IMenuGroup" ],
        [ "IParam", "classcatena_1_1common_1_1IParam.html", "classcatena_1_1common_1_1IParam" ],
        [ "IParamVisitor", "classcatena_1_1common_1_1IParamVisitor.html", "classcatena_1_1common_1_1IParamVisitor" ],
        [ "IPolyglotText", "classcatena_1_1common_1_1IPolyglotText.html", null ],
        [ "ISubscriptionManager", "classcatena_1_1common_1_1ISubscriptionManager.html", "classcatena_1_1common_1_1ISubscriptionManager" ],
        [ "LanguagePack", "classcatena_1_1common_1_1LanguagePack.html", "classcatena_1_1common_1_1LanguagePack" ],
        [ "LanguagePackTag", "structcatena_1_1common_1_1LanguagePackTag.html", null ],
        [ "Menu", "classcatena_1_1common_1_1Menu.html", "classcatena_1_1common_1_1Menu" ],
        [ "MenuGroup", "classcatena_1_1common_1_1MenuGroup.html", "classcatena_1_1common_1_1MenuGroup" ],
        [ "MenuGroupTag", "structcatena_1_1common_1_1MenuGroupTag.html", null ],
        [ "MenuTag", "structcatena_1_1common_1_1MenuTag.html", null ],
        [ "NamedChoiceConstraint", "classcatena_1_1common_1_1NamedChoiceConstraint.html", "classcatena_1_1common_1_1NamedChoiceConstraint" ],
        [ "ParamDescriptor", "classcatena_1_1common_1_1ParamDescriptor.html", "classcatena_1_1common_1_1ParamDescriptor" ],
        [ "ParamTag", "structcatena_1_1common_1_1ParamTag.html", null ],
        [ "ParamVisitor", "classcatena_1_1common_1_1ParamVisitor.html", "classcatena_1_1common_1_1ParamVisitor" ],
        [ "ParamWithValue", "classcatena_1_1common_1_1ParamWithValue.html", "classcatena_1_1common_1_1ParamWithValue" ],
        [ "Path", "classcatena_1_1common_1_1Path.html", "classcatena_1_1common_1_1Path" ],
        [ "PicklistConstraint", "classcatena_1_1common_1_1PicklistConstraint.html", "classcatena_1_1common_1_1PicklistConstraint" ],
        [ "PolyglotText", "classcatena_1_1common_1_1PolyglotText.html", null ],
        [ "RangeConstraint", "classcatena_1_1common_1_1RangeConstraint.html", "classcatena_1_1common_1_1RangeConstraint" ],
        [ "StructInfo", "structcatena_1_1common_1_1StructInfo.html", null ],
        [ "SubscriptionManager", "classcatena_1_1common_1_1SubscriptionManager.html", "classcatena_1_1common_1_1SubscriptionManager" ]
      ] ],
      [ "gRPC", "namespacecatena_1_1gRPC.html", [
        [ "AddLanguage", "classcatena_1_1gRPC_1_1AddLanguage.html", "classcatena_1_1gRPC_1_1AddLanguage" ],
        [ "BasicParamInfoRequest", "classcatena_1_1gRPC_1_1BasicParamInfoRequest.html", "classcatena_1_1gRPC_1_1BasicParamInfoRequest" ],
        [ "CallData", "classcatena_1_1gRPC_1_1CallData.html", "classcatena_1_1gRPC_1_1CallData" ],
        [ "CatenaServiceImpl", "classcatena_1_1gRPC_1_1CatenaServiceImpl.html", "classcatena_1_1gRPC_1_1CatenaServiceImpl" ],
        [ "Connect", "classcatena_1_1gRPC_1_1Connect.html", "classcatena_1_1gRPC_1_1Connect" ],
        [ "DeviceRequest", "classcatena_1_1gRPC_1_1DeviceRequest.html", "classcatena_1_1gRPC_1_1DeviceRequest" ],
        [ "ExecuteCommand", "classcatena_1_1gRPC_1_1ExecuteCommand.html", "classcatena_1_1gRPC_1_1ExecuteCommand" ],
        [ "ExternalObjectRequest", "classcatena_1_1gRPC_1_1ExternalObjectRequest.html", "classcatena_1_1gRPC_1_1ExternalObjectRequest" ],
        [ "GetParam", "classcatena_1_1gRPC_1_1GetParam.html", "classcatena_1_1gRPC_1_1GetParam" ],
        [ "GetPopulatedSlots", "classcatena_1_1gRPC_1_1GetPopulatedSlots.html", "classcatena_1_1gRPC_1_1GetPopulatedSlots" ],
        [ "GetValue", "classcatena_1_1gRPC_1_1GetValue.html", "classcatena_1_1gRPC_1_1GetValue" ],
        [ "ICallData", "classcatena_1_1gRPC_1_1ICallData.html", "classcatena_1_1gRPC_1_1ICallData" ],
        [ "ICatenaServiceImpl", "classcatena_1_1gRPC_1_1ICatenaServiceImpl.html", "classcatena_1_1gRPC_1_1ICatenaServiceImpl" ],
        [ "JWTAuthMetadataProcessor", "classcatena_1_1gRPC_1_1JWTAuthMetadataProcessor.html", null ],
        [ "LanguagePackRequest", "classcatena_1_1gRPC_1_1LanguagePackRequest.html", "classcatena_1_1gRPC_1_1LanguagePackRequest" ],
        [ "ListLanguages", "classcatena_1_1gRPC_1_1ListLanguages.html", "classcatena_1_1gRPC_1_1ListLanguages" ],
        [ "MultiSetValue", "classcatena_1_1gRPC_1_1MultiSetValue.html", "classcatena_1_1gRPC_1_1MultiSetValue" ],
        [ "PeerInfo", "classcatena_1_1gRPC_1_1PeerInfo.html", "classcatena_1_1gRPC_1_1PeerInfo" ],
        [ "PeerManager", "classcatena_1_1gRPC_1_1PeerManager.html", "classcatena_1_1gRPC_1_1PeerManager" ],
        [ "SetValue", "classcatena_1_1gRPC_1_1SetValue.html", "classcatena_1_1gRPC_1_1SetValue" ],
        [ "UpdateSubscriptions", "classcatena_1_1gRPC_1_1UpdateSubscriptions.html", "classcatena_1_1gRPC_1_1UpdateSubscriptions" ]
      ] ],
      [ "grpc", null, [
        [ "SubscriptionManager", "classcatena_1_1grpc_1_1SubscriptionManager.html", "classcatena_1_1grpc_1_1SubscriptionManager" ]
      ] ],
      [ "meta", "namespacecatena_1_1meta.html", [
        [ "FrontT", "classcatena_1_1meta_1_1FrontT.html", null ],
        [ "FrontT< TypeList< Head, Tail... > >", "classcatena_1_1meta_1_1FrontT_3_01TypeList_3_01Head_00_01Tail_8_8_8_01_4_01_4.html", null ],
        [ "is_streamable", "structcatena_1_1meta_1_1is__streamable.html", null ],
        [ "is_streamable< T, std::void_t< decltype(std::cout<< std::declval< T >())> >", "structcatena_1_1meta_1_1is__streamable_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1cout_3_3_f018ad5e508e96c26725f0228af2f889.html", null ],
        [ "is_variant", "structcatena_1_1meta_1_1is__variant.html", null ],
        [ "is_variant< T, std::void_t< decltype(std::get< 0 >(std::declval< T >()))> >", "structcatena_1_1meta_1_1is__variant_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1get_3_010_01ebdd46a9af85028d423a39579c8d1c53.html", null ],
        [ "NthElementT", "classcatena_1_1meta_1_1NthElementT.html", null ],
        [ "NthElementT< L, 0 >", "classcatena_1_1meta_1_1NthElementT_3_01L_00_010_01_4.html", null ],
        [ "PopFrontT", "classcatena_1_1meta_1_1PopFrontT.html", null ],
        [ "PopFrontT< TypeList< Head, Tail... > >", "classcatena_1_1meta_1_1PopFrontT_3_01TypeList_3_01Head_00_01Tail_8_8_8_01_4_01_4.html", null ],
        [ "PushFrontT", "classcatena_1_1meta_1_1PushFrontT.html", null ],
        [ "PushFrontT< TypeList< Ts... >, T >", "classcatena_1_1meta_1_1PushFrontT_3_01TypeList_3_01Ts_8_8_8_01_4_00_01T_01_4.html", null ],
        [ "TypeList", "classcatena_1_1meta_1_1TypeList.html", null ]
      ] ],
      [ "patterns", "namespacecatena_1_1patterns.html", [
        [ "EnumDecorator", "classcatena_1_1patterns_1_1EnumDecorator.html", "classcatena_1_1patterns_1_1EnumDecorator" ],
        [ "Functory", "classcatena_1_1patterns_1_1Functory.html", "classcatena_1_1patterns_1_1Functory" ],
        [ "GenericFactory", "classcatena_1_1patterns_1_1GenericFactory.html", "classcatena_1_1patterns_1_1GenericFactory" ],
        [ "Singleton", "classcatena_1_1patterns_1_1Singleton.html", "classcatena_1_1patterns_1_1Singleton" ]
      ] ],
      [ "REST", "namespacecatena_1_1REST.html", [
        [ "AddLanguage", "classcatena_1_1REST_1_1AddLanguage.html", "classcatena_1_1REST_1_1AddLanguage" ],
        [ "AssetRequest", "classcatena_1_1REST_1_1AssetRequest.html", "classcatena_1_1REST_1_1AssetRequest" ],
        [ "BasicParamInfoRequest", "classcatena_1_1REST_1_1BasicParamInfoRequest.html", "classcatena_1_1REST_1_1BasicParamInfoRequest" ],
        [ "CatenaServiceImpl", "classcatena_1_1REST_1_1CatenaServiceImpl.html", "classcatena_1_1REST_1_1CatenaServiceImpl" ],
        [ "Connect", "classcatena_1_1REST_1_1Connect.html", "classcatena_1_1REST_1_1Connect" ],
        [ "DeviceRequest", "classcatena_1_1REST_1_1DeviceRequest.html", "classcatena_1_1REST_1_1DeviceRequest" ],
        [ "ExecuteCommand", "classcatena_1_1REST_1_1ExecuteCommand.html", "classcatena_1_1REST_1_1ExecuteCommand" ],
        [ "GetParam", "classcatena_1_1REST_1_1GetParam.html", "classcatena_1_1REST_1_1GetParam" ],
        [ "GetPopulatedSlots", "classcatena_1_1REST_1_1GetPopulatedSlots.html", "classcatena_1_1REST_1_1GetPopulatedSlots" ],
        [ "GetValue", "classcatena_1_1REST_1_1GetValue.html", "classcatena_1_1REST_1_1GetValue" ],
        [ "ICallData", "classcatena_1_1REST_1_1ICallData.html", "classcatena_1_1REST_1_1ICallData" ],
        [ "IServiceImpl", "classcatena_1_1REST_1_1IServiceImpl.html", "classcatena_1_1REST_1_1IServiceImpl" ],
        [ "ISocketReader", "classcatena_1_1REST_1_1ISocketReader.html", "classcatena_1_1REST_1_1ISocketReader" ],
        [ "ISocketWriter", "classcatena_1_1REST_1_1ISocketWriter.html", "classcatena_1_1REST_1_1ISocketWriter" ],
        [ "LanguagePackRequest", "classcatena_1_1REST_1_1LanguagePackRequest.html", "classcatena_1_1REST_1_1LanguagePackRequest" ],
        [ "ListLanguages", "classcatena_1_1REST_1_1ListLanguages.html", "classcatena_1_1REST_1_1ListLanguages" ],
        [ "MultiSetValue", "classcatena_1_1REST_1_1MultiSetValue.html", "classcatena_1_1REST_1_1MultiSetValue" ],
        [ "SetValue", "classcatena_1_1REST_1_1SetValue.html", "classcatena_1_1REST_1_1SetValue" ],
        [ "SocketReader", "classcatena_1_1REST_1_1SocketReader.html", "classcatena_1_1REST_1_1SocketReader" ],
        [ "SocketWriter", "classcatena_1_1REST_1_1SocketWriter.html", "classcatena_1_1REST_1_1SocketWriter" ],
        [ "SSEWriter", "classcatena_1_1REST_1_1SSEWriter.html", "classcatena_1_1REST_1_1SSEWriter" ],
        [ "UpdateSubscriptions", "classcatena_1_1REST_1_1UpdateSubscriptions.html", "classcatena_1_1REST_1_1UpdateSubscriptions" ]
      ] ],
      [ "exception_with_status", "structcatena_1_1exception__with__status.html", null ]
    ] ]
];