var hierarchy =
[
    [ "catena::CatenaService::AsyncService", null, [
      [ "catena::gRPC::ICatenaServiceImpl", "classcatena_1_1gRPC_1_1ICatenaServiceImpl.html", [
        [ "catena::gRPC::CatenaServiceImpl", "classcatena_1_1gRPC_1_1CatenaServiceImpl.html", null ]
      ] ]
    ] ],
    [ "grpc::AuthMetadataProcessor", null, [
      [ "catena::gRPC::JWTAuthMetadataProcessor", "classcatena_1_1gRPC_1_1JWTAuthMetadataProcessor.html", null ]
    ] ],
    [ "catena::common::Authorizer", "classcatena_1_1common_1_1Authorizer.html", null ],
    [ "catena::common::CommandTag", "structcatena_1_1common_1_1CommandTag.html", null ],
    [ "catena::common::ConstraintTag", "structcatena_1_1common_1_1ConstraintTag.html", null ],
    [ "catena::common::EmptyValue", "structcatena_1_1common_1_1EmptyValue.html", null ],
    [ "catena::patterns::EnumDecorator< E >", "classcatena_1_1patterns_1_1EnumDecorator.html", null ],
    [ "catena::common::FakeLock", "structcatena_1_1common_1_1FakeLock.html", null ],
    [ "std::false_type", null, [
      [ "catena::meta::is_streamable< T, typename >", "structcatena_1_1meta_1_1is__streamable.html", null ],
      [ "catena::meta::is_variant< T, typename >", "structcatena_1_1meta_1_1is__variant.html", null ]
    ] ],
    [ "catena::common::FieldInfo< FieldType, StructType >", "structcatena_1_1common_1_1FieldInfo.html", null ],
    [ "catena::meta::FrontT< L >", "classcatena_1_1meta_1_1FrontT.html", [
      [ "catena::meta::NthElementT< L, 0 >", "classcatena_1_1meta_1_1NthElementT_3_01L_00_010_01_4.html", null ]
    ] ],
    [ "catena::meta::FrontT< TypeList< Head, Tail... > >", "classcatena_1_1meta_1_1FrontT_3_01TypeList_3_01Head_00_01Tail_8_8_8_01_4_01_4.html", null ],
    [ "catena::gRPC::ICallData", "classcatena_1_1gRPC_1_1ICallData.html", [
      [ "catena::gRPC::CallData", "classcatena_1_1gRPC_1_1CallData.html", [
        [ "catena::gRPC::AddLanguage", "classcatena_1_1gRPC_1_1AddLanguage.html", null ],
        [ "catena::gRPC::Connect", "classcatena_1_1gRPC_1_1Connect.html", null ],
        [ "catena::gRPC::DeviceRequest", "classcatena_1_1gRPC_1_1DeviceRequest.html", null ],
        [ "catena::gRPC::ExecuteCommand", "classcatena_1_1gRPC_1_1ExecuteCommand.html", null ],
        [ "catena::gRPC::ExternalObjectRequest", "classcatena_1_1gRPC_1_1ExternalObjectRequest.html", null ],
        [ "catena::gRPC::GetParam", "classcatena_1_1gRPC_1_1GetParam.html", null ],
        [ "catena::gRPC::GetPopulatedSlots", "classcatena_1_1gRPC_1_1GetPopulatedSlots.html", null ],
        [ "catena::gRPC::GetValue", "classcatena_1_1gRPC_1_1GetValue.html", null ],
        [ "catena::gRPC::LanguagePackRequest", "classcatena_1_1gRPC_1_1LanguagePackRequest.html", null ],
        [ "catena::gRPC::ListLanguages", "classcatena_1_1gRPC_1_1ListLanguages.html", null ],
        [ "catena::gRPC::MultiSetValue", "classcatena_1_1gRPC_1_1MultiSetValue.html", [
          [ "catena::gRPC::SetValue", "classcatena_1_1gRPC_1_1SetValue.html", null ]
        ] ],
        [ "catena::gRPC::ParamInfoRequest", "classcatena_1_1gRPC_1_1ParamInfoRequest.html", null ],
        [ "catena::gRPC::UpdateSubscriptions", "classcatena_1_1gRPC_1_1UpdateSubscriptions.html", null ]
      ] ]
    ] ],
    [ "catena::REST::ICallData", "classcatena_1_1REST_1_1ICallData.html", [
      [ "catena::REST::AssetRequest", "classcatena_1_1REST_1_1AssetRequest.html", null ],
      [ "catena::REST::Connect", "classcatena_1_1REST_1_1Connect.html", null ],
      [ "catena::REST::DeviceRequest", "classcatena_1_1REST_1_1DeviceRequest.html", null ],
      [ "catena::REST::ExecuteCommand", "classcatena_1_1REST_1_1ExecuteCommand.html", null ],
      [ "catena::REST::GetParam", "classcatena_1_1REST_1_1GetParam.html", null ],
      [ "catena::REST::GetPopulatedSlots", "classcatena_1_1REST_1_1GetPopulatedSlots.html", null ],
      [ "catena::REST::GetValue", "classcatena_1_1REST_1_1GetValue.html", null ],
      [ "catena::REST::LanguagePack", "classcatena_1_1REST_1_1LanguagePack.html", null ],
      [ "catena::REST::Languages", "classcatena_1_1REST_1_1Languages.html", null ],
      [ "catena::REST::MultiSetValue", "classcatena_1_1REST_1_1MultiSetValue.html", [
        [ "catena::REST::SetValue", "classcatena_1_1REST_1_1SetValue.html", null ]
      ] ],
      [ "catena::REST::ParamInfoRequest", "classcatena_1_1REST_1_1ParamInfoRequest.html", null ],
      [ "catena::REST::Subscriptions", "classcatena_1_1REST_1_1Subscriptions.html", null ]
    ] ],
    [ "catena::common::IParamDescriptor::ICommandResponder", "classcatena_1_1common_1_1IParamDescriptor_1_1ICommandResponder.html", [
      [ "catena::common::ParamDescriptor::CommandResponder", "classcatena_1_1common_1_1ParamDescriptor_1_1CommandResponder.html", null ]
    ] ],
    [ "catena::common::IConnect", "classcatena_1_1common_1_1IConnect.html", [
      [ "catena::common::Connect", "classcatena_1_1common_1_1Connect.html", [
        [ "catena::REST::Connect", "classcatena_1_1REST_1_1Connect.html", null ],
        [ "catena::gRPC::Connect", "classcatena_1_1gRPC_1_1Connect.html", null ]
      ] ]
    ] ],
    [ "catena::common::IConstraint", "classcatena_1_1common_1_1IConstraint.html", [
      [ "catena::common::NamedChoiceConstraint< T >", "classcatena_1_1common_1_1NamedChoiceConstraint.html", null ],
      [ "catena::common::RangeConstraint< T >", "classcatena_1_1common_1_1RangeConstraint.html", null ]
    ] ],
    [ "catena::common::IDevice", "classcatena_1_1common_1_1IDevice.html", [
      [ "catena::common::Device", "classcatena_1_1common_1_1Device.html", null ]
    ] ],
    [ "catena::common::IDevice::IDeviceSerializer", "classcatena_1_1common_1_1IDevice_1_1IDeviceSerializer.html", [
      [ "catena::common::Device::DeviceSerializer", "classcatena_1_1common_1_1Device_1_1DeviceSerializer.html", null ]
    ] ],
    [ "catena::common::ILanguagePack", "classcatena_1_1common_1_1ILanguagePack.html", [
      [ "catena::common::LanguagePack", "classcatena_1_1common_1_1LanguagePack.html", null ]
    ] ],
    [ "catena::common::IMenu", "classcatena_1_1common_1_1IMenu.html", [
      [ "catena::common::Menu", "classcatena_1_1common_1_1Menu.html", null ]
    ] ],
    [ "catena::common::IMenuGroup", "classcatena_1_1common_1_1IMenuGroup.html", [
      [ "catena::common::MenuGroup", "classcatena_1_1common_1_1MenuGroup.html", null ]
    ] ],
    [ "catena::common::IParam", "classcatena_1_1common_1_1IParam.html", [
      [ "catena::common::ParamWithValue< T >", "classcatena_1_1common_1_1ParamWithValue.html", null ]
    ] ],
    [ "catena::common::IParamDescriptor", "classcatena_1_1common_1_1IParamDescriptor.html", [
      [ "catena::common::ParamDescriptor", "classcatena_1_1common_1_1ParamDescriptor.html", null ]
    ] ],
    [ "catena::common::IParamVisitor", "classcatena_1_1common_1_1IParamVisitor.html", [
      [ "catena::common::ParamVisitor", "classcatena_1_1common_1_1ParamVisitor.html", null ]
    ] ],
    [ "catena::common::IPolyglotText", "classcatena_1_1common_1_1IPolyglotText.html", [
      [ "catena::common::PolyglotText", "classcatena_1_1common_1_1PolyglotText.html", null ]
    ] ],
    [ "catena::REST::IServiceImpl", "classcatena_1_1REST_1_1IServiceImpl.html", [
      [ "catena::REST::CatenaServiceImpl", "classcatena_1_1REST_1_1CatenaServiceImpl.html", null ]
    ] ],
    [ "catena::REST::ISocketReader", "classcatena_1_1REST_1_1ISocketReader.html", [
      [ "catena::REST::SocketReader", "classcatena_1_1REST_1_1SocketReader.html", null ]
    ] ],
    [ "catena::REST::ISocketWriter", "classcatena_1_1REST_1_1ISocketWriter.html", [
      [ "catena::REST::SSEWriter", "classcatena_1_1REST_1_1SSEWriter.html", null ],
      [ "catena::REST::SocketWriter", "classcatena_1_1REST_1_1SocketWriter.html", null ]
    ] ],
    [ "catena::common::ISubscriptionManager", "classcatena_1_1common_1_1ISubscriptionManager.html", [
      [ "catena::common::SubscriptionManager", "classcatena_1_1common_1_1SubscriptionManager.html", null ]
    ] ],
    [ "catena::common::LanguagePackTag", "structcatena_1_1common_1_1LanguagePackTag.html", null ],
    [ "Logger", "classLogger.html", null ],
    [ "catena::common::MenuGroupTag", "structcatena_1_1common_1_1MenuGroupTag.html", null ],
    [ "catena::common::MenuTag", "structcatena_1_1common_1_1MenuTag.html", null ],
    [ "catena::meta::NthElementT< L, N >", "classcatena_1_1meta_1_1NthElementT.html", null ],
    [ "catena::common::ParamTag", "structcatena_1_1common_1_1ParamTag.html", null ],
    [ "catena::common::Path", "classcatena_1_1common_1_1Path.html", null ],
    [ "catena::gRPC::PeerInfo", "classcatena_1_1gRPC_1_1PeerInfo.html", null ],
    [ "catena::meta::PopFrontT< L >", "classcatena_1_1meta_1_1PopFrontT.html", null ],
    [ "catena::meta::PopFrontT< TypeList< Head, Tail... > >", "classcatena_1_1meta_1_1PopFrontT_3_01TypeList_3_01Head_00_01Tail_8_8_8_01_4_01_4.html", null ],
    [ "catena::common::Device::DeviceSerializer::promise_type", "structcatena_1_1common_1_1Device_1_1DeviceSerializer_1_1promise__type.html", null ],
    [ "catena::common::ParamDescriptor::CommandResponder::promise_type", "structcatena_1_1common_1_1ParamDescriptor_1_1CommandResponder_1_1promise__type.html", null ],
    [ "catena::patterns::Singleton< T >::Protector", "structcatena_1_1patterns_1_1Singleton_1_1Protector.html", null ],
    [ "catena::meta::PushFrontT< L, T >", "classcatena_1_1meta_1_1PushFrontT.html", null ],
    [ "catena::meta::PushFrontT< TypeList< Ts... >, T >", "classcatena_1_1meta_1_1PushFrontT_3_01TypeList_3_01Ts_8_8_8_01_4_00_01T_01_4.html", null ],
    [ "std::runtime_error", null, [
      [ "catena::exception_with_status", "structcatena_1_1exception__with__status.html", null ]
    ] ],
    [ "catena::patterns::Singleton< T >", "classcatena_1_1patterns_1_1Singleton.html", null ],
    [ "catena::patterns::Singleton< Functory< K, R, Ms... > >", "classcatena_1_1patterns_1_1Singleton.html", [
      [ "catena::patterns::Functory< K, R, Ms >", "classcatena_1_1patterns_1_1Functory.html", null ]
    ] ],
    [ "catena::patterns::Singleton< GenericFactory< P, K, Ms... > >", "classcatena_1_1patterns_1_1Singleton.html", [
      [ "catena::patterns::GenericFactory< P, K, Ms >", "classcatena_1_1patterns_1_1GenericFactory.html", null ]
    ] ],
    [ "catena::patterns::Singleton< PeerManager >", "classcatena_1_1patterns_1_1Singleton.html", [
      [ "catena::gRPC::PeerManager", "classcatena_1_1gRPC_1_1PeerManager.html", null ]
    ] ],
    [ "catena::common::StructInfo< T >", "structcatena_1_1common_1_1StructInfo.html", null ],
    [ "std::true_type", null, [
      [ "catena::meta::is_streamable< T, std::void_t< decltype(std::cout<< std::declval< T >())> >", "structcatena_1_1meta_1_1is__streamable_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1cout_3_3_f018ad5e508e96c26725f0228af2f889.html", null ],
      [ "catena::meta::is_variant< T, std::void_t< decltype(std::get< 0 >(std::declval< T >()))> >", "structcatena_1_1meta_1_1is__variant_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1get_3_010_01ebdd46a9af85028d423a39579c8d1c53.html", null ]
    ] ],
    [ "catena::meta::TypeList< Ts >", "classcatena_1_1meta_1_1TypeList.html", null ]
];